--- a/sistema/templates/sobre.html
+++ b/sistema/templates/sobre.html
@@ -8,6 +8,13 @@
 {% block 'conteudo' %}
 <div>
     <h1>Sobre</h1>
-    <p>O presente sistema ajuda pessoas a criarem listas de compras. Poderemos cadastrar, editar ou excluir produtos, mercados e listas de compras. Para utiliza-lo é preciso autenticação.</p>
+    <h6>Desenvolvedor:</h6>
+    <p>Diego Dreossi</p>
+    <h6>RA:</h6>
+    <p>2840481921019</p>
+    <p>Portifólio: <a href="https://github.com/diego-goncalves-dreossi">Github</a></p>
+    <h6>Descrição:</h6>
+    <p>O presente sistema ajuda pessoas a criarem relatórios simples de compras de produtos. Poderemos cadastrar, editar ou excluir produtos, mercados. Para utiliza-lo é preciso autenticação.</p>
+    <p>Escolhemos um produto, escolhemos uma quantidade, um mercado e uma forma de pagamento, assim criando um relatório.</p>
 </div>
 {% endblock %}
