--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  {% if usuario %}
+  {% if usuario_logado %}
   <nav class="navbar navbar-dark bg-danger">
     <a class="navbar-brand" style="font-weight: bolder;" href="#">iMercado</a>
     <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample01" aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
