--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,9 @@
           <a class="nav-link" href="{% url 'sistema:sobre' %}">Sobre</a>
         </li>
         <li class="nav-item active">
+          <a class="nav-link" href="#">Produtos</a>
+        </li>
+        <li class="nav-item active">
           <a class="nav-link" href="#">Mercados</a>
         </li>
         
@@ -38,8 +41,10 @@
           <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ações</a>
           <div class="dropdown-menu" aria-labelledby="dropdown01">
             <a class="dropdown-item" href="#">Ver compra atual</a>
+            <a class="dropdown-item" href="#">Cadastrar forma de pagamento</a>
             <a class="dropdown-item" href="#">Cadastrar mercado</a>
             <a class="dropdown-item" href="#">Cadastrar produto</a>
+            <a class="dropdown-item" href="#">Sair</a>
           </div>
         </li>
       </ul>
