--- a/sistema/templates/sobre.html
+++ b/sistema/templates/sobre.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block 'titulo' %}iMercado - Sobre{% endblock %}
 {% block 'head' %}
 
 {% endblock %}
@@ -15,8 +16,8 @@
         <p>2840481921019</p>
         <p>Portifólio: <a href="https://github.com/diego-goncalves-dreossi">Github</a></p>
         <h6>Descrição:</h6>
-        <p>O presente sistema ajuda pessoas a criarem relatórios simples de compras de produtos. Poderemos cadastrar, editar ou excluir produtos, mercados. Para utiliza-lo é preciso autenticação.</p>
-        <p>Escolhemos um produto, escolhemos uma quantidade, um mercado e uma forma de pagamento, assim criando um relatório.</p>
+        <p>O presente sistema serve para catalogar o estoque de produtos de uma franquia de supermercados.</p>
+        <p>Podemos cadastrar produtos, fornecedores, formas de pagamento, filiais da franquia e pedidos de produtos.</p>
     </div>
 </main>
 {% endblock %}
