--- a/templates/base.html
+++ b/templates/base.html
@@ -31,19 +31,29 @@
           <a class="nav-link" href="#">Produtos</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">Mercados</a>
+          <a class="nav-link" href="#">Filiais</a>
         </li>
         
         <li class="nav-item active">
-          <a class="nav-link" href="#">Listas de compras</a>
+          <a class="nav-link" href="#">Pedidos</a>
         </li>
+
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Fornecedores</a>
+        </li>
+
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Formas de pagamento</a>
+        </li>
+
         <li class="nav-item active dropdown">
           <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ações</a>
           <div class="dropdown-menu" aria-labelledby="dropdown01">
             <a class="dropdown-item" href="#">Ver compra atual</a>
             <a class="dropdown-item" href="#">Cadastrar forma de pagamento</a>
-            <a class="dropdown-item" href="#">Cadastrar mercado</a>
+            <a class="dropdown-item" href="#">Cadastrar filial</a>
             <a class="dropdown-item" href="#">Cadastrar produto</a>
+            <a class="dropdown-item" href="#">Cadastrar fornecedor</a>
             <a class="dropdown-item" href="#">Sair</a>
           </div>
         </li>
