--- a/sistema/templates/sobre.html
+++ b/sistema/templates/sobre.html
@@ -17,7 +17,8 @@
         <p>Portifólio: <a href="https://github.com/diego-goncalves-dreossi">Github</a></p>
         <h6>Descrição:</h6>
         <p>O presente sistema serve para catalogar o estoque de produtos de uma franquia de supermercados.</p>
-        <p>Podemos cadastrar produtos, fornecedores, formas de pagamento, filiais da franquia e pedidos de produtos.</p>
+        <p>Podemos cadastrar produtos, fornecedores,  filiais da franquia e pedidos de produtos.</p>
+        <P>Controle o estoque de sua rede conosco.</P>
     </div>
 </main>
 {% endblock %}
