--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,9 @@
           <a class="nav-link" href="{% url 'sistema:sobre' %}">Sobre</a>
         </li>
         <li class="nav-item active">
+          <a class="nav-link" href="#">Setores</a>
+        </li>
+        <li class="nav-item active">
           <a class="nav-link" href="#">Produtos</a>
         </li>
         <li class="nav-item active">
@@ -42,20 +45,18 @@
           <a class="nav-link" href="#">Fornecedores</a>
         </li>
 
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Formas de pagamento</a>
-        </li>
-
         <li class="nav-item active dropdown">
-          <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ações</a>
+          <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Cadastrar</a>
           <div class="dropdown-menu" aria-labelledby="dropdown01">
-            <a class="dropdown-item" href="#">Ver compra atual</a>
-            <a class="dropdown-item" href="#">Cadastrar forma de pagamento</a>
-            <a class="dropdown-item" href="#">Cadastrar filial</a>
-            <a class="dropdown-item" href="#">Cadastrar produto</a>
-            <a class="dropdown-item" href="#">Cadastrar fornecedor</a>
-            <a class="dropdown-item" href="#">Sair</a>
+            <a class="dropdown-item" href="#">Pedido</a>
+            <a class="dropdown-item" href="#">Setor</a>
+            <a class="dropdown-item" href="#">Filial</a>
+            <a class="dropdown-item" href="#">Produto</a>
+            <a class="dropdown-item" href="#">Fornecedor</a>
           </div>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Sair</a>
         </li>
       </ul>
     </div>
