--- a/sistema/templates/produto/adproduto.html
+++ b/sistema/templates/produto/adproduto.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-
+{% block 'titulo' %}iMercado - Novo produto{% endblock %}
 {% block 'conteudo' %}
 <main>
     <h1>Adicionar novo produto</h1>
