--- a/sistema/templates/produto/produtos.html
+++ b/sistema/templates/produto/produtos.html
@@ -9,5 +9,6 @@
 {% block 'conteudo' %}
 <main>
     <h1>Lista dos Produtos</h1>
+    <button><a href="{% url 'sistema:adproduto' %}">Adicionar</a></button>
 </main>
 {% endblock %}
