--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
 <body>
   {% if usuario_logado %}
   <nav class="navbar navbar-dark bg-danger">
-    <a class="navbar-brand" style="font-weight: bolder;" href="#">iMercado</a>
+    <a class="navbar-brand" style="font-weight: bolder;" href="{% url 'sistema:inicio' %}">iMercado</a>
     <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample01" aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -29,7 +29,7 @@
           <a class="nav-link" href="{% url 'sistema:sobre' %}">Sobre</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="{% url 'sistema:setores' %}">Setores</a>
+          <a class="nav-link" href="{% url 'categorias:categorias' %}">Categorias</a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="{% url 'sistema:produtos' %}">Produtos</a>
