--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
           <a class="nav-link" href="{% url 'sistema:sobre' %}">Sobre</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="{% url 'categorias:categorias' %}">Categorias</a>
+          <a class="nav-link" href="{% url 'categorias:listacategorias' %}">Categorias</a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="{% url 'sistema:produtos' %}">Produtos</a>
