ver e editar categoria

--- a/categorias/templates/vercategoria.html
+++ b/categorias/templates/vercategoria.html
@@ -4,8 +4,14 @@
 {% block 'titulo' %}iMercado - Categoria{% endblock %}
 {% block 'conteudo' %}
 <main>
-    <h1>Categoria</h1>
+    <h1>Categoria {{cat.id}}</h1>
+    
+    <p>{{cat.nome}}</p>
+    <p>{{cat.descricao}}</p>
 
+    <button><a href="{% url 'categorias:editarcategoria' cat.id %}">Editar</a></button>
+    <button><a href="">Excluir</a></button>
+   
 
     
 </main>
