--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
         </li>
 
         <li class="nav-item active">
-          <a class="nav-link" href="{% url 'sistema:fornecedores' %}">Fornecedores</a>
+          <a class="nav-link" href="{% url 'fornecedores:listafornecedores' %}">Fornecedores</a>
         </li>
 
         <li class="nav-item active dropdown">
