--- a/categorias/templates/vercategoria.html
+++ b/categorias/templates/vercategoria.html
@@ -14,10 +14,12 @@
         <input type="hidden" name="categoria_id" value="{{cat.id}}">
         
         <button><a href="{% url 'categorias:editarcategoria' cat.id %}">Editar</a></button>
-        <input type="submit" value="Excluir" class="btn btn-info">
+        <input type="submit" value="Excluir" class="btn btn-info exclusaocat">
     </form>
    
 
     
 </main>
+
+<script src="{% static 'categorias/js/funcoes.js' %}"></script>
 {% endblock %}
