--- a/fornecedores/templates/adfornecedor.html
+++ b/fornecedores/templates/adfornecedor.html
@@ -14,7 +14,7 @@
         <input type="text" name="nfornecedor" id="nfornecedor" placeholder="Nome categoria">
 
         <label>CNPJ:</label>
-        <textarea id="dfornecedor" name="dfornecedor" rows="2" cols="30"></textarea>
+        <input id="cnpj" name="cnpj" rows="2" cols="30"></input>
         <input type="submit" value="Salvar" class="btn btn-success">
     </form>
 
