--- a/templates/base.html
+++ b/templates/base.html
@@ -32,10 +32,7 @@
           <a class="nav-link" href="{% url 'categorias:listacategorias' %}">Categorias</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="{% url 'sistema:produtos' %}">Produtos</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="{% url 'sistema:filiais' %}">Filiais</a>
+          <a class="nav-link" href="{% url 'produtos:listaprodutos' %}">Produtos</a>
         </li>
         
         <li class="nav-item active">
