--- a/fornecedores/templates/adfornecedor.html
+++ b/fornecedores/templates/adfornecedor.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block 'titulo' %}iMercado - Novo categorias{% endblock %}
+{% block 'titulo' %}iMercado - Novo fornecedor{% endblock %}
 {% block 'conteudo' %}
 <main>
     <h1>Adicionar novo fornecedor</h1>
@@ -15,7 +15,7 @@
         <input type="text" name="nfornecedor" id="nfornecedor" placeholder="Nome categoria">
 
         <label>CNPJ:</label>
-        <input id="cnpj" name="cnpj" rows="2" cols="30"></input>
+        <input id="cnpj" name="cnpj"></input>
         <input type="submit" value="Salvar" class="btn btn-success" onclick="confirmarAdForn()">
     </form>
 
