--- a/fornecedores/templates/fornecedores.html
+++ b/fornecedores/templates/fornecedores.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block 'titulo' %}iMercado - Setores{% endblock %}
+{% block 'titulo' %}iMercado - Fornecedores{% endblock %}
 {% block 'head' %}
 
 {% endblock %}
