--- a/produtos/templates/editarproduto.html
+++ b/produtos/templates/editarproduto.html
@@ -1,27 +1,51 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block 'titulo' %}iMercado - Editar categoria{% endblock %}
+{% block 'titulo' %}iMercado - Editar produto{% endblock %}
 {% block 'conteudo' %}
 <main>
-    <h1>Editar Fornecedor {{fn.id}}</h1>
+    <h1>Editar produto {{pr.id}}</h1>
     
-    <form action="{% url 'fornecedores:editarfornecedorbd' %}" method="post">
+    <form action="{% url 'produtos:editarprodutobd' %}" method="post">
         {% csrf_token %}
-        <input type="hidden" name="fornecedor_id" value="{{fn.id}}">
+        <input type="hidden" name="produto_id" value="{{pr.id}}">
+
+        <label>Logo:</label>
+        <input id="id_image" type="file" class="" Required name="image">
+
         <label>Nome:</label>
-        <input type="text"  value="{{fn.nome}}" name="nfornecedor" id="nfornecedor">
+        <input type="text"  value="{{pr.nome}}" name="nprod" id="nprod">
         <!--class="form-control"-->
-        <label>CNPJ:</label>
-        <input type="text"  value="{{fn.cnpj}}" name="cnpj" id="cnpj">
+        <label>Categoria:</label>
+        <select style="display: none;" id="cat_prod" class="form-control" name="cat_prod">
+            {% for cat in categorias %}
+              <option value="{{cat.id}}">{{cat.nome}}</option>
+            {% endfor %}
+        </select>
+
+        <label>Preço:</label>
+        <input type="text"  value="{{pr.preco}}" name="pprod" id="pprod">
+
+        <label>Descrição:</label>
+        <textarea type="text"  value="{{pr.descricao}}" name="dprod" id="dprod">
+
+        <label>Estoque:</label>
+        <input type="text"  value="{{pr.estoque}}" name="eprod" id="eprod">
 
         <input type="submit" value="Salvar" class="btn btn-success">
-        <a href="{% url 'fornecedores:verfornecedor' fn.id %}" class="btn btn-danger">Cancelar</a>
+        <a href="{% url 'produtos:verproduto' pr.id %}" class="btn btn-danger">Cancelar</a>
+
+        <label>Fornecedor:</label>
+        <select style="display: none;" id="forn_prod" class="form-control" name="forn_prod">
+            {% for forn in fornecedores %}
+              <option value="{{forn.id}}">{{forn.nome}}</option>
+            {% endfor %}
+        </select>
         
     </form>
 
     
 </main>
 
-<script src="{% static 'fornecedores/js/funcoes.js' %}"></script>
+<script src="{% static 'produtos/js/funcoes.js' %}"></script>
 {% endblock %}
