--- a/fornecedores/templates/altimagem.html
+++ b/fornecedores/templates/altimagem.html
@@ -12,7 +12,7 @@
     
         <span>Fornecedor {{fn.nome}}</span>
           
-        <form action="{% url 'fornecedores:editarfornecedorbd' %}" method="post" enctype='multipart/form-data'>
+        <form action="{% url 'fornecedores:alterarimagem' %}" method="post" enctype='multipart/form-data'>
             {% csrf_token %}
             <input type="hidden" name="fornecedor_id" value="{{fn.id}}">
             <input type="hidden" name="imagem_antiga" value="{{fn.img.url}}">
