--- a/produtos/templates/verproduto.html
+++ b/produtos/templates/verproduto.html
@@ -22,7 +22,7 @@
         
         <button><a href="{% url 'produtos:editarproduto' pr.id %}">Editar</a></button>
         <input type="submit" value="Excluir" class="btn btn-danger exclusao" >
-        <a href="{% url 'produtos:listaproduto' %}" class="btn btn-info">Voltar</a>
+        <a href="{% url 'produtos:listaprodutos' %}" class="btn btn-info">Voltar</a>
     </form>
    
 </main>
