--- a/fornecedores/templates/adfornecedor.html
+++ b/fornecedores/templates/adfornecedor.html
@@ -16,7 +16,7 @@
 
         <label>CNPJ:</label>
         <input id="cnpj" name="cnpj"></input>
-        <input type="submit" value="Salvar" class="btn btn-success" onclick="confirmarAdForn()">
+        <input type="submit" value="Salvar" class="btn btn-success afn">
     </form>
 
     
