--- a/fornecedores/templates/editarfornecedor.html
+++ b/fornecedores/templates/editarfornecedor.html
@@ -18,8 +18,9 @@
         <label>CNPJ:</label>
         <input type="text"  value="{{fn.cnpj}}" name="cnpj" id="cnpj">
 
-        <input type="submit" value="Salvar" class="btn btn-success">
-        <a href="{% url 'fornecedores:verfornecedor' fn.id %}" class="btn btn-danger">Cancelar</a>
+        
+        <input type="submit" value="Salvar" class="btn btn-success efn">
+        <a href="{% url 'fornecedores:verfornecedor' fn.id %}" class="btn btn-danger">Voltar</a>
         <a href="{% url 'fornecedores:paginseririmg' fn.id %}" class="btn btn-warning">Nova imagem</a>
         
     </form>
