--- a/fornecedores/templates/verfornecedor.html
+++ b/fornecedores/templates/verfornecedor.html
@@ -17,7 +17,7 @@
         <input type="hidden" name="imagem_url" value="{{fn.img.url}}">
         
         <button><a href="{% url 'fornecedores:editarfornecedor' fn.id %}">Editar</a></button>
-        <input type="submit" value="Excluir" class="btn btn-danger exclusao" >
+        <input type="submit" value="Excluir" class="btn btn-danger efn" >
         <a href="{% url 'fornecedores:listafornecedores' %}" class="btn btn-info">Voltar</a>
     </form>
    
