--- a/produtos/templates/adproduto.html
+++ b/produtos/templates/adproduto.html
@@ -41,7 +41,7 @@
             {% endfor %}
         </select>
         
-        <input type="submit" value="Salvar" class="btn btn-success">
+        <input type="submit" value="Salvar" class="btn btn-success apr" >
         <a href="{% url 'produtos:listaprodutos' %}" class="btn btn-danger">Cancelar</a>
     </form>
 
