--- a/produtos/templates/altimagemprod.html
+++ b/produtos/templates/altimagemprod.html
@@ -19,14 +19,11 @@
             <label>Novo Logo:</label>
             <input id="id_image" type="file" class="" Required name="image">
 
-            <input type="submit" value="Salvar" class="btn btn-success">
-            <a href="{% url 'produtos:editarproduto' pr.id %}" class="btn btn-danger">Cancelar</a>
+            <input type="submit" value="Salvar" class="btn btn-success aprimg">
+            <a href="{% url 'produtos:editarproduto' pr.id %}" class="btn btn-danger">Voltar</a>
 
         </form>     
-                    
-               
-           
-        
-        
+                     
 </main>
+<script src="{% static 'produtos/js/funcoes.js' %}"></script>
 {% endblock %}
