--- a/produtos/templates/verproduto.html
+++ b/produtos/templates/verproduto.html
@@ -21,7 +21,7 @@
         <input type="hidden" name="imagem_prod" value="{{pr.img.url}}">
         
         <button><a href="{% url 'produtos:editarproduto' pr.id %}">Editar</a></button>
-        <input type="submit" value="Excluir" class="btn btn-danger exclusao" >
+        <input type="submit" value="Excluir" class="btn btn-danger epr" >
         <a href="{% url 'produtos:listaprodutos' %}" class="btn btn-info">Voltar</a>
     </form>
    
