--- a/categorias/templates/adcategoria.html
+++ b/categorias/templates/adcategoria.html
@@ -14,7 +14,7 @@
 
         <label>Descrição:</label>
         <textarea id="dcategoria" name="dcategoria" rows="2" cols="30"></textarea>
-        <input type="submit" value="Salvar" class="btn btn-success" onclick="confirmarAdCat()">
+        <input type="submit" value="Salvar" class="btn btn-success acat">
     </form>
 
     
