--- a/categorias/templates/editarcategoria.html
+++ b/categorias/templates/editarcategoria.html
@@ -15,7 +15,7 @@
         <label>Descrição:</label>
         <input type="text" id="dcategoria" value="{{cat.descricao}}" name="dcategoria" ></input>
 
-        <input type="submit" value="Salvar" class="btn btn-success">
+        <input type="submit" value="Salvar" class="btn btn-success edcat">
         <a href="{% url 'categorias:vercategoria' cat.id %}" class="btn btn-danger">Cancelar</a>
 
     </form>
